[gd_scene load_steps=6 format=3 uid="uid://dcknfd16dxc7y"]

[ext_resource type="PackedScene" uid="uid://cdf6alep5my7c" path="res://visual_interface.tscn" id="1_6ly6s"]
[ext_resource type="Script" path="res://game.gd" id="1_yd004"]
[ext_resource type="PackedScene" uid="uid://7tv7gw5eu30t" path="res://board.tscn" id="2_ytswg"]
[ext_resource type="PackedScene" uid="uid://c13gvby8u3ku2" path="res://Ui/Menu/pause_menu.tscn" id="4_rk14f"]
[ext_resource type="Script" path="res://Ui/Click_Blocker.gd" id="5_vn182"]

[node name="Game" type="Node2D"]
script = ExtResource("1_yd004")

[node name="Visual_Interface" parent="." instance=ExtResource("1_6ly6s")]
z_index = -2

[node name="Board" parent="." instance=ExtResource("2_ytswg")]

[node name="UI" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 270.0
mouse_filter = 2

[node name="Pause_Menu" parent="UI" instance=ExtResource("4_rk14f")]
visible = false
layout_mode = 1

[node name="Click_Blocker" type="Control" parent="UI"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("5_vn182")
